# autonomous-robotics-stack

./: .clang-format  .clang-tidy  .dockerignore  .editorconfig  .gitattributes  .gitignore  LICENSE  README.md  docker-compose.yml
.github/workflows/: ci.yml
docker/: Dockerfile  entrypoint.sh
docs/: ROADMAP.md
docs/adr/: 0001-record-architecture-decisions.md  0002-ros-agnostic-core.md
src/ars_core/: CMakeLists.txt  CMakePresets.json
src/ars_core/include/ars_core/control/: pid_controller.hpp  pure_pursuit.hpp
src/ars_core/include/ars_core/estimation/: diff_drive_odometry.hpp  ekf.hpp
src/ars_core/include/ars_core/geometry/: angle.hpp  pose2.hpp  twist2.hpp  vec2.hpp
src/ars_core/include/ars_core/math/: matrix.hpp
src/ars_core/include/ars_core/mission/: behavior_tree.hpp  waypoint_mission.hpp
src/ars_core/include/ars_core/planning/: astar.hpp  occupancy_grid.hpp  path_smoother.hpp
src/ars_core/test/control/: test_pid_controller.cpp  test_pure_pursuit.cpp
src/ars_core/test/estimation/: test_diff_drive_odometry.cpp  test_ekf.cpp
src/ars_core/test/geometry/: test_angle.cpp  test_pose2.cpp  test_twist2.cpp  test_vec2.cpp
src/ars_core/test/math/: test_matrix.cpp
src/ars_core/test/mission/: test_behavior_tree.cpp  test_waypoint_mission.cpp
src/ars_core/test/planning/: test_astar.cpp  test_occupancy_grid.cpp  test_path_smoother.cpp
src/ars_ros2/: CMakeLists.txt  package.xml
src/ars_ros2/include/ars_ros2/: controller_node.hpp  conversions.hpp  mission_node.hpp  odometry_node.hpp  planner_node.hpp
src/ars_ros2/src/: controller_node.cpp  controller_node_main.cpp  mission_node.cpp  mission_node_main.cpp  odometry_node.cpp  odometry_node_main.cpp  planner_node.cpp  planner_node_main.cpp
src/ars_ros2/test/: test_controller_node.cpp  test_conversions.cpp  test_mission_node.cpp  test_odometry_node.cpp  test_planner_node.cpp
src/ars_sim/: CMakeLists.txt  package.xml
src/ars_sim/config/: bridge.yaml
src/ars_sim/launch/: sil.launch.py
src/ars_sim/worlds/: depot.sdf
