<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>ars_ros2</name>
  <version>0.5.0</version>
  <description>
    ROS 2 adapter layer for the Autonomous Robotics Stack: lifecycle nodes and
    message conversions around the ROS-agnostic ars_core libraries.
  </description>
  <maintainer email="mohamed.feki@ml-pa.com">Mohamed Feki</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>geometry_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>sensor_msgs</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
